fix title alignment

--- a/src/app/features/credential-management/credential-management.component.scss
+++ b/src/app/features/credential-management/credential-management.component.scss
@@ -29,7 +29,7 @@
     align-items: center;
 
     .title {
-      width: 70%;
+      width: 75%;
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -90,6 +90,7 @@
     }
   }
 
+
   .table-frame{
     display:flex;
     flex-direction:column;
@@ -110,7 +111,7 @@
 }
 
 @media(width < 768px){
-  .table-frame{
+  .title, .table-frame{
     width: 80%;
   }
   .mat-column-updated{
@@ -121,6 +122,7 @@
 @media(width < 590px){
   .credential-management-container {
     .title{
+      width:100%;
       .title-buttons{
         flex-direction:column;
         justify-content: normal;
